# meeting-live-trans

./: .dockerignore  .env.example  .gitignore  agents.md  docker-compose.prod.yml  docker-compose.yml  package.json
.github/workflows/: ci.yml
apps/api/: alembic.ini  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_fix_participant_unique.py  003_fix_caption_preferences.py  004_rename_internal_local_users.py
apps/api/app/: __init__.py  config.py  database.py  main.py  meeting_lifecycle.py  privacy.py  security.py  seed.py
apps/api/app/auth/: __init__.py  dependencies.py  security.py
apps/api/app/models/: __init__.py  audit_log.py  meeting.py  meeting_invite.py  meeting_participant.py  user.py
apps/api/app/routers/: active_rooms.py  auth.py  captions.py  invites.py  livekit.py  meetings.py  webhooks.py
apps/api/tests/: __init__.py  conftest.py  test_auth.py  test_captions.py  test_integration.py  test_meeting_lifecycle.py  test_reliability.py  test_security.py
apps/translation-worker/: eval_dataset.csv  eval_harness.py  eval_report.md  main.py  openai_transcribe.py  openai_translate.py  pipeline.py  pyproject.toml  room_orchestrator.py  translators.py
apps/translation-worker/tests/: test_pipeline.py  test_protocol.py
apps/web/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
docs/: architecture.md  deployment.md  local-development.md
infrastructure/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
infrastructure/livekit/: livekit.yaml
infrastructure/proxy/: Caddyfile
(+11 files in other folders)
