[project]
name = "translation-worker"
version = "0.1.0"
description = "AI translation worker for Meeting Live Trans"
requires-python = ">=3.12"
dependencies = [
    "livekit",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
