[project]
name = "translation-worker"
version = "0.1.0"
description = "AI translation worker for Meeting Live Trans"
requires-python = ">=3.12"
dependencies = [
    "livekit==1.1.13",
    "livekit-api==1.2.0",
    "livekit-agents==1.6.5",
    "websockets==15.0.1",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
